--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,4 +12,4 @@ commands:
     usage: /sectionon [player]
   sectionoff:
     description: Disables automatic teleports between sections for a player
-    usage: /sectionon [player]
+    usage: /sectionoff [player]
