--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,3 +13,6 @@ commands:
   sectionoff:
     description: Disables automatic teleports between sections for a player
     usage: /sectionoff [player]
+  linfo:
+    description: Gets information about a players section
+    usage: /linfo [player]
