--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,32 @@
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: 'com.github.johnrengelman.shadow'
+buildscript {
+    ext.kotlin_version = '1.3.61'
 
-ext.kotlin_version = '1.3.61'
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
+    }
+}
+
+plugins {
+    id 'java'
+    id 'idea'
+}
+
+//Stops errors when a parent project defines the version being used for a plugin like kotlin
+ext.addPlugin = { String pluginId -> if (!project.getPlugins().hasPlugin(pluginId)) apply plugin: pluginId }
+
+addPlugin('org.jetbrains.kotlin.jvm')
+addPlugin('com.github.johnrengelman.shadow')
+
 ext.plugin_path = '' //Put your plugins folder directory here! If it is left as '', jars won't be copied
 
 group = 'com.derongan.minecraft'
-version = plugin_version + "-SNAPSHOT"
+version = pluginVersion + "-SNAPSHOT"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -24,8 +44,8 @@ repositories {
 
 dependencies {
     testImplementation 'junit:junit:4.12'
-    implementation 'org.spigotmc:spigot-api:1.15-R0.1-SNAPSHOT'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compileOnly 'org.spigotmc:spigot-api:1.15-R0.1-SNAPSHOT'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
@@ -38,10 +58,9 @@ processResources {
 
 shadowJar {
     getArchiveClassifier().set(null)
-    dependencies {
-        include(dependency("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"))
-    }
+    minimize()
 }
+
 build.dependsOn shadowJar
 
 compileKotlin {
