build.gradle cleanup + fixed #7 and fixed #10

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,9 @@ processResources {
 
 shadowJar {
     getArchiveClassifier().set(null)
-    minimize()
+    minimize {
+        exclude(dependency("org.jetbrains.kotlin:.*"))
+    }
 }
 
 build.dependsOn shadowJar
