--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ authors: [Derongan]
 api-version: '1.15'
 description: A plugin for letting you create a deeper world. Or at least fake it.
 
-softdepend: [Multiverse-Core]
+softdepend: [Multiverse-Core, BlockLocker]
 
 commands:
   sectionon:
