Increment build #s and update versioning to conform to semver

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ group = 'com.derongan.minecraft'
 version = pluginVersion
 
 if (project.hasProperty("buildNo")) {
-    version += "-" + buildNo
+    version += "." + buildNo
 }
 
 sourceCompatibility = 1.8
