--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,4 @@
 buildscript {
-    ext.kotlin_version = '1.3.61'
-
     repositories {
         maven {
             url "https://plugins.gradle.org/m2/"
@@ -38,7 +36,7 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
-    maven{
+    maven {
         name = 'rutger-repo'
         url = 'http://www.rutgerkok.nl/repo'
     }
@@ -68,18 +66,11 @@ shadowJar {
 
 build.dependsOn shadowJar
 
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
+compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
+compileTestKotlin { kotlinOptions { jvmTarget = "1.8" } }
 
 //Move into plugins folder
+//TODO get the updated script in here
 if (plugin_path != '') {
     println("Copying to plugin directory")
     task copyJar(type: Copy) {
