--- a/build.gradle
+++ b/build.gradle
@@ -47,8 +47,8 @@ repositories {
         name = "MineInAbyss"
         url = uri("https://maven.pkg.github.com/MineInAbyss/Idofront")
         credentials {
-            username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-            password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+            password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
         }
     }
 }
