--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,7 @@
-pluginVersion=0.1.2-alpha
+pluginVersion=0.1.3-alpha
+kotlin_version=1.3.70
+#this should always be set to false in "production", enabling it is used to make any local additions to
+#guiy before they are pushed to guiy's main repo.
+useLocalGuiy=false
+#same but for Idofront
+useLocalIdofront=false
