--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,5 @@
 pluginVersion=0.1.3-alpha
-kotlin_version=1.3.71
-#this should always be set to false in "production", enabling it is used to make any local additions to
-#guiy before they are pushed to guiy's main repo.
+kotlin_version=1.3.72
+#toggle composite builds
 useLocalGuiy=false
-#same but for Idofront
 useLocalIdofront=false
