Update kotlin, switch to idofront command dsl

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-pluginVersion=0.1.3-alpha
-kotlin_version=1.3.72
+pluginVersion=0.1.4-alpha
+kotlin_version=1.4.0
+server_version=1.16.2-R0.1-SNAPSHOT
 #toggle composite builds
 useLocalGuiy=false
 useLocalIdofront=false
