--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,6 @@ if (project.hasProperty("buildNo")) version += ".$buildNo"
 
 java {
     sourceCompatibility JavaVersion.VERSION_1_8
-    withJavadocJar()
     withSourcesJar()
 }
 
@@ -39,11 +38,10 @@ publishing {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
-    compileOnly 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    compileOnly "org.spigotmc:spigot-api:$server_version"
     compileOnly 'nl.rutgerkok:blocklocker:1.6.2-SNAPSHOT'
 
-    implementation 'com.mineinabyss:idofront:0.1.+'
+    implementation 'com.mineinabyss:idofront:0.3.+'
 
     testImplementation 'junit:junit:4.12'
 }
@@ -57,6 +55,12 @@ processResources {
 shadowJar {
     getArchiveClassifier().set(null)
     relocate 'com.mineinabyss.idofront', "${project.group}.${project.name}.idofront"
+
+    dependencies {
+        exclude(dependency('org.jetbrains.kotlin:kotlin-stdlib:.*'))
+        exclude(dependency('org.jetbrains.kotlin:kotlin-stdlib-jdk8:.*'))
+    }
+
     minimize()
 }
 build.dependsOn shadowJar
