--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,10 +2,10 @@ name: DeeperWorld
 version: @version@
 main: com.derongan.minecraft.deeperworld.DeeperWorld
 authors: [Derongan]
-api-version: '1.15'
+api-version: '1.16'
 description: A plugin for letting you create a deeper world. Or at least fake it.
 
-softdepend: [Multiverse-Core, BlockLocker]
+softdepend: [Multiverse-Core, BlockLocker, KotlinSpice]
 
 commands:
   sectionon:
