--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,9 @@ publishing {
 dependencies {
     compileOnly "org.spigotmc:spigot-api:$server_version"
     compileOnly 'nl.rutgerkok:blocklocker:1.6.2-SNAPSHOT'
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    implementation 'com.mineinabyss:idofront:0.3.+'
+    implementation 'com.mineinabyss:idofront:0.3.1+'
 
     testImplementation 'junit:junit:4.12'
 }
@@ -55,11 +56,6 @@ processResources {
 shadowJar {
     getArchiveClassifier().set(null)
     relocate 'com.mineinabyss.idofront', "${project.group}.${project.name}.idofront"
-
-    dependencies {
-        exclude(dependency('org.jetbrains.kotlin:kotlin-stdlib:.*'))
-        exclude(dependency('org.jetbrains.kotlin:kotlin-stdlib-jdk8:.*'))
-    }
 
     minimize()
 }
