Move things into a shared gradle script

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: DeeperWorld
-version: @version@
+version: @plugin_version@
 main: com.derongan.minecraft.deeperworld.DeeperWorld
 authors: [Derongan]
 api-version: '1.16'
