--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,10 @@ plugins {
     id 'io.github.0ffz.github-packages'
 }
 
+apply from: 'https://raw.githubusercontent.com/MineInAbyss/shared-gradle/master/common.gradle'
+
 group 'com.derongan.minecraft'
-version pluginVersion
-
-if (project.hasProperty("buildNo")) version += ".$buildNo"
-
-java {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    withSourcesJar()
-}
+version plugin_version
 
 repositories {
     mavenCentral()
@@ -24,6 +19,16 @@ repositories {
     maven { url 'http://www.rutgerkok.nl/repo' }
     maven githubPackage.invoke("MineInAbyss/Idofront")
     maven githubPackage.invoke("rutgerkok/BlockLocker")
+}
+
+dependencies {
+    compileOnly "org.spigotmc:spigot-api:$server_version"
+    compileOnly 'nl.rutgerkok:blocklocker:1.6.2-SNAPSHOT'
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+    implementation 'com.mineinabyss:idofront:0.3.1+'
+
+    testImplementation 'junit:junit:4.12'
 }
 
 publishing {
@@ -37,22 +42,6 @@ publishing {
     }
 }
 
-dependencies {
-    compileOnly "org.spigotmc:spigot-api:$server_version"
-    compileOnly 'nl.rutgerkok:blocklocker:1.6.2-SNAPSHOT'
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-
-    implementation 'com.mineinabyss:idofront:0.3.1+'
-
-    testImplementation 'junit:junit:4.12'
-}
-
-import org.apache.tools.ant.filters.ReplaceTokens
-
-processResources {
-    filter ReplaceTokens, tokens: [version: version]
-}
-
 shadowJar {
     getArchiveClassifier().set(null)
     relocate 'com.mineinabyss.idofront', "${project.group}.${project.name}.idofront"
@@ -60,16 +49,6 @@ shadowJar {
     minimize()
 }
 build.dependsOn shadowJar
-
-//Move into plugins folder
-if (project.hasProperty("plugin_path") && plugin_path) {
-    println("Copying to plugin directory $plugin_path")
-    task copyJar(type: Copy) {
-        from shadowJar // here it automatically reads jar file produced from jar task
-        into plugin_path
-    }
-    build.dependsOn copyJar
-}
 
 compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
 compileTestKotlin { kotlinOptions { jvmTarget = "1.8" } }
