--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-pluginVersion=0.1.4-alpha
+plugin_version=0.1.4-alpha
 kotlin_version=1.4.0
 server_version=1.16.2-R0.1-SNAPSHOT
 #toggle composite builds
