--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ kotlin_version=1.4.0
 server_version=1.16.2-R0.1-SNAPSHOT
 #toggle composite builds
 useLocalGuiy=false
-useLocalIdofront=false
+useLocalIdofront=true
