--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,13 @@
 pluginManagement {
     plugins {
         id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
+        id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
         id 'com.github.johnrengelman.shadow' version '6.0.0'
         id 'io.github.0ffz.github-packages' version '1.0.3'
     }
 }
 
 rootProject.name = "deeperworld"
+
+if(useLocalGuiy.toBoolean()) includeBuild '../guiy'
+if(useLocalIdofront.toBoolean()) includeBuild '../idofront'
