--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -24,6 +24,8 @@ fall:
   startingDamage: 1.0
   # How often to damage players in ticks
   hitDelay: 10
+  # Whether to spawn cloud particles when the player is being damaged.
+  spawnParticles: true
 
 # The delay between teleporting the player and attached entities across sections, in ticks. Needs to be at least 2.
 entityTeleportDelay: 2
