--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
     maven { url 'https://oss.sonatype.org/content/groups/public/' }
     maven { url 'http://www.rutgerkok.nl/repo' }
     maven { url 'http://nexus.okkero.com/repository/maven-releases/' } //Skedule
+    maven { url "https://repo.dmulloy2.net/nexus/repository/public/" }
     maven githubPackage.invoke("MineInAbyss/Idofront")
     maven githubPackage.invoke("rutgerkok/BlockLocker")
     maven githubPackage.invoke("MineInAbyss/KotlinSpice")
@@ -30,6 +31,7 @@ dependencies {
     compileOnly 'nl.rutgerkok:blocklocker:1.6.2-SNAPSHOT'
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compileOnly "org.cultofclang.minecraft:kotlinspice:$kotlin_version+"
+    compileOnly "com.comphenix.protocol:ProtocolLib:4.5.0"
 
     implementation 'com.mineinabyss:idofront:0.3.27'
 
