--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,27 +8,29 @@ description: A plugin for letting you create a deeper world. Or at least fake it
 softdepend: [Multiverse-Core, BlockLocker, KotlinSpice, ProtocolLib]
 
 commands:
-  sectionon:
-    description: Enables automatic teleports between sections for a player
-    usage: /sectionon [player]
+  deeperworld:
+    aliases: [ dw ]
+  deeperworld tp:
+    aliases: [ dw tp ]
+    description: Enables or disables automatic teleports between sections for a player
+    usage: /deeperworld tp [player] <true/false>
     permission: deeperworld.admin
-  sectionoff:
-    description: Disables automatic teleports between sections for a player
-    usage: /sectionoff [player]
-    permission: deeperworld.admin
-  linfo:
+  deeperworld linfo:
+    aliases: [ dw linfo ]
     description: Gets information about a players section
-    usage: /linfo [player]
+    usage: /deeperworld linfo [player]
     permission: deeperworld.linfo
-  syncedtime:
-    permission: deeperworld.time
-  syncedtime set:
+  deeperworld time:
+    aliases: [ dw time ]
+  deeperworld time set:
+    aliases: [ dw time set ]
     description: Set the time of the main synchronization world and the other worlds with their respective offsets
-    useage: /syncedtime set [time]
+    usage: /deeperworld time set <time>
     permission: deeperworld.time
-  syncedtime add:
+  deeperworld time add:
+    aliases: [ dw time add ]
     description: Add to the main synchronization world time and the other worlds with their respective offsets
-    useage: /syncedtime add [time]
+    usage: /deeperworld time add <time>
     permission: deeperworld.time
 
 permissions:
