--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,4 @@
-plugin_version=0.3
-kotlin_version=1.4.31
-server_version=1.16.5-R0.1-SNAPSHOT
-#toggle composite builds
-useLocalGuiy=false
-useLocalIdofront=false
+group=com.derongan.minecraft
+version=0.3
+kotlinVersion=1.5.0
+serverVersion=1.16.5-R0.1-SNAPSHOT
