Update build script to use conventions

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 group=com.derongan.minecraft
 version=0.3
-kotlinVersion=1.5.0
-serverVersion=1.16.5-R0.1-SNAPSHOT
+kotlinVersion=1.5.21
+serverVersion=1.17.1-R0.1-SNAPSHOT
+miaConventionsVersion=1.5.21-14
