--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,5 @@ group=com.derongan.minecraft
 version=0.3
 kotlinVersion=1.5.21
 serverVersion=1.17.1-R0.1-SNAPSHOT
+idofrontVersion=1.17.1-0.6.23
 miaConventionsVersion=1.5.21-14
