--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 group=com.derongan.minecraft
 version=0.3
-kotlinVersion=1.5.21
+kotlinVersion=1.5.31
 serverVersion=1.17.1-R0.1-SNAPSHOT
-idofrontVersion=1.17.1-0.6.23
-miaConventionsVersion=1.5.21-14
+idofrontVersion=0.7.35
+idofrontConventions=1.5.31-35
