--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
-group=com.derongan.minecraft
-version=0.3
-kotlinVersion=1.5.31
+group=com.mineinabyss
+version=0.4
+kotlinVersion=1.6.10
 serverVersion=1.17.1-R0.1-SNAPSHOT
-idofrontVersion=0.7.38
-idofrontConventions=1.5.31-38
+idofrontConventions=1.6.10-51
