--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: DeeperWorld
 version: ${plugin_version}
-main: com.derongan.minecraft.deeperworld.DeeperWorldPlugin
-authors: [Derongan]
-api-version: '1.16'
+main: com.mineinabyss.deeperworld.DeeperWorldPlugin
+authors: [Derongan, Offz, Boy000, Norazan, Scyu]
+api-version: '1.17'
 description: A plugin for letting you create a deeper world. Or at least fake it.
 
 softdepend: [Multiverse-Core, BlockLocker, KotlinSpice, ProtocolLib, FastAsyncWorldEdit]
@@ -10,7 +10,6 @@ softdepend: [Multiverse-Core, BlockLocker, KotlinSpice, ProtocolLib, FastAsyncWo
 commands:
   deeperworld:
     aliases: [ dw ]
-  linfo: {}
 
 permissions:
   deeperworld.*:
