--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,13 +4,13 @@ sections:
     refTop: [ 0, 0, 0 ]
     # refBottom should connect to the refTop of the next section.
     refBottom: [ 0, 16, 0 ]
-    #x1, y1, x2, y2
-    region: [ 0, 0, 1000, 1000 ]
+    #x1, y1, z1, x2, y2, z2
+    region: [ 0, 0, 0, 1000, 256, 1000 ]
     world: world
   - name: section2
     refTop: [ 1000, 240, 0 ]
     refBottom: [ 2000, 16, 0 ]
-    region: [ 1000, 0, 2000, 1000 ]
+    region: [ 1000, 0, 0, 2000, 256, 1000 ]
     world: world
 # The damage players will take when outside a managed section.
 damageOutsideSections: 1.0
