Update ido version to fix scheduler issues

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=com.mineinabyss
 version=0.4
-kotlinVersion=1.6.10
+kotlinVersion=1.6.20-RC
 serverVersion=1.18.2-R0.1-SNAPSHOT
-idofrontConventions=1.6.10-65
+idofrontConventions=1.6.20-RC-70
