--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -26,6 +26,10 @@ dependencies:
       required: false
       load: BEFORE
       join-classpath: true
+    ProtocolLib:
+      required: false
+      load: BEFORE
+      join-classpath: true
     FastAsyncWorldEdit:
       required: false
       load: BEFORE
