--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -30,3 +30,11 @@ dependencies:
       required: false
       load: BEFORE
       join-classpath: true
+    My_Worlds:
+      required: false
+      load: BEFORE
+      join-classpath: true
+    Multiverse-Core:
+      required: false
+      load: BEFORE
+      join-classpath: true
