--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: Build
 
 on:
   pull_request:
@@ -17,8 +17,8 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 17
+          java-version: 21
           cache: gradle
 
-      - name: Run build
+      - name: Build
         run: gradle build
