--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,10 +16,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: MineInAbyss/publish-action@develop
+      - uses: MineInAbyss/publish-action@v3
         with:
-          maven-metadata-url: https://repo.mineinabyss.com/releases/com/mineinabyss/deeperworld/maven-metadata.xml
-          maven-snapshot-metadata-url: https://repo.mineinabyss.com/snapshots/com/mineinabyss/deeperworld/maven-metadata.xml
           maven-username: ${{ secrets.MAVEN_PUBLISH_USERNAME }}
           maven-password: ${{ secrets.MAVEN_PUBLISH_PASSWORD }}
           release-files: |
